2002-08-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-charset.c: Get rid of a #include "unicode.h". This is no
	longer needed since we use glib2's unicode stuff.

2002-08-02  Charles Kerr <charles@rebelbase.com>

	* gmime-message.c (gmime_message_foreach_part): if the message
	isn't a multipart message, just invoke the callback directly,
	passing in the single part.

	* gmime-message.c (gmime_message_set_message_id): work around
	a g_strstrip() warning if message_id is NULL.

	* gmime-part.c (g_mime_part_get_content_object): remove "const"
	from the retval; otherwise it's impossible to add a new filter.

2002-07-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-html.c (is_addr_char): Don't use "isprint(c)" to
	mean "c >= 32 && c < 128" since it doesn't in most locales.
	(is_url_char): Same.
	(is_trailing_garbage): Same.
	(is_domain_name_char): New macro for dns-valid characters
	(email_address_extract): Use is_domain_name_char rather than
	is_addr_char for the part after the @.

2002-07-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_step_headers): Finish the fix from
	yesterday, the last statement of the while-loop needs to
	re-calculate `len' for parser_fill().

2002-07-30  Charles Kerr <charles@rebelbase.com>

	* gmime-message.c (message_remove_header): Fix April 3 2002 bug
	that kept message-remove-header from removing headers.

2002-07-29  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (message_get_headers): Write the toplevel MIME
	Part's headers to the string as well, this fixes bug #88632 in
	bugzilla.gnome.org.

2002-07-29  Jeffrey Stedfast  <fejj@ximian.com>

	The following changes are meant to address bug #88100 on
	bugzilla.gnome.org - I'm as of yet unsure whether or not GMime
	should override the Message-Id write function or if Pan should do
	it. I'm sort of leaning towards Pan doing it simply because the
	current behavior is RFC compliant and the bug is really a "we need