@@ -122,7 +122,7 @@ static void
 message_part_add_header (GMimeObject *object, const char *header, const char *value)
 {
 	/* Make sure that the header is a Content-* header, else it
-           doesn't belong on a message/* part */
+           doesn't belong on a message part */
 	
 	if (!g_strncasecmp ("Content-", header, 8))
 		GMIME_OBJECT_CLASS (parent_class)->add_header (object, header, value);
@@ -136,7 +136,7 @@ message_part_set_header (GMimeObject *object, const char *header, const char *va
 		return;
 	
 	/* Make sure that the header is a Content-* header, else it
-           doesn't belong on a message/* part */
+           doesn't belong on a message part */
 	
 	if (!g_strncasecmp ("Content-", header, 8))
 		GMIME_OBJECT_CLASS (parent_class)->set_header (object, header, value);
@@ -146,7 +146,7 @@ static const char *
 message_part_get_header (GMimeObject *object, const char *header)
 {
 	/* Make sure that the header is a Content-* header, else it
-           doesn't belong on a message/* part */
+           doesn't belong on a message part */
 	
 	if (!g_strncasecmp ("Content-", header, 8))
 		return GMIME_OBJECT_CLASS (parent_class)->get_header (object, header);
@@ -158,7 +158,7 @@ static void
 message_part_remove_header (GMimeObject *object, const char *header)
 {
 	/* Make sure that the header is a Content-* header, else it
-           doesn't belong on a message/* part */
+           doesn't belong on a message part */
 	
 	if (!g_strncasecmp ("Content-", header, 8))
 		return GMIME_OBJECT_CLASS (parent_class)->remove_header (object, header);
